--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -114,5 +114,9 @@
   "ID": "ID",
   "Status": "Status",
   "Created": "Created",
-  "Created on": "Created on"
+  "Created on": "Created on",
+  "TicketFormConfigDialog": {
+    "fieldname": "Feldname:",
+    "isVisible": "Sichtbar?"
+  }
 }
