[#183233922] Allow to attach multiple files

--- a/src/config/locales/de.json
+++ b/src/config/locales/de.json
@@ -109,6 +109,7 @@
   "Please upload files up to 20 MB": "Sie können eine Datei bis zu einer Größe von 20 MB anhängen",
   "The size of your attachment exceeds 20 MB": "Die Größer Ihres Anhangs überschreitet 20 MB",
   "Processing file…": "Die Datei wird bearbeitet ...",
+  "Failed": "Gescheitert",
   "Create": "Anlegen",
   "Please report an issue of this type only": "Bitte melden Sie nur ein Problem dieser Art",
   "ID": "ID",
@@ -120,10 +121,10 @@
     "isVisible": "Sichtbar?"
   },
   "CreateNewTicket": {
-    "title": "Title",
+    "title": "Titel",
     "message": {
-      "text": "Text",
-      "attachment": "Attachment"
+      "text": "Botschaft",
+      "attachments": "Anhänge"
     }
   }
 }
