--- a/src/config/locales/de.json
+++ b/src/config/locales/de.json
@@ -26,8 +26,6 @@
   "search for ticket": "Ticket suchen",
   "Please enter a subject": "Bitte geben Sie das Thema Ihres Anliegens an.",
   "Please describe your request in a few sentences": "Bitte beschreiben Sie Ihre Anfrage in ein paar Sätzen.",
-  "Progress": "Fortschritt",
-  "Ticket Type": "Ticket-Typ",
   "You need to select a service request type": "Sie müssen einen Service-Anfrage-Typ auswählen.",
   "in progress": "In Arbeit",
   "chat": "Nachrichten",
@@ -106,8 +104,6 @@
   "Create": "Anlegen",
   "ID": "ID",
   "Status": "Status",
-  "Created": "Erstellt",
-  "Created on": "Erstellt am",
   "TicketFormConfigDialog": {
     "fieldname": "Feldname:",
     "showInCreateForm": "Im Formular anzeigen",
@@ -115,11 +111,28 @@
   },
   "Ticket": {
     "labels": {
+      "created_at": "Erstellt am",
       "title": "Titel",
       "message": {
         "text": "Nachricht",
         "attachments": "Anhänge"
-      }
+      },
+      "number": "Ticketnummer",
+      "status": "Status",
+      "type": "Ticket-Typ"
+    },
+    "status": {
+      "new": "neu",
+      "open": "offen",
+      "waiting": "wartend",
+      "closed": "geschlossen",
+      "null": "-"
+    },
+    "type": {
+      "problem": "Problem",
+      "task": "Aufgabe",
+      "question": "Frage",
+      "null": "-"
     }
   }
 }
