--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -134,6 +134,6 @@
   },
   "TicketListWidget": {
     "title": "Meine Tickets",
-    "header": "({{count}} von {{total}} Tickets Insgesamt)"
+    "header": "({{count}} of {{total}} tickets)"
   }
 }
