--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -57,14 +57,8 @@
   "A ticket has been created.": "A Ticket has been created.",
   "We will answer you as soon as possible.": "We will answer you as soon as possible.",
   "You may add comments and attachments below.": "You may add comments and attachments below.",
-  "byCreationDate": "Newest First",
-  "reverseByCreationDate": "Oldest First",
-  "byProgress": "Lowest progress First",
-  "reverseByProgress": "Highest Progress First",
   "creation-error": "During the ticket creation an error has occured. Please try again.",
-  "all": "All",
   "Documentation": "Documentation",
-  "active": "Active",
   "Ticket Subject": "Subject",
   "Description": "Description",
   "Ticket title": "Ticket title",
@@ -88,13 +82,13 @@
     "labels": {
       "id": "ID",
       "created_at": "Created on",
-      "updated_at": "Updated at",
+      "updated_at": "Last updated at",
       "title": "Title",
       "message": {
         "text": "Message",
         "attachments": "Attachments"
       },
-      "number": "Ticket Number",
+      "number": "ID",
       "status": "Status",
       "type": "Ticket Type"
     },
@@ -134,6 +128,14 @@
   },
   "TicketListWidget": {
     "title": "Meine Tickets",
-    "header": "({{count}} of {{total}} tickets)"
+    "header": "({{count}} of {{total}} tickets)",
+    "filters": {
+      "all": "All",
+      "active": "Active",
+      "new": "New",
+      "open": "Open",
+      "waiting": "Waiting",
+      "closed": "Closed"
+    }
   }
 }
