--- a/src/config/locales/en.json
+++ b/src/config/locales/en.json
@@ -113,8 +113,10 @@
     "file_upload_failed": "File upload failed",
     "processing_file": "Processing file ..."
   },
+  "TicketHeader": {
+    "back": "zurück"
+  },
   "MessageArea": {
-    "attach_file": "Attach File",
     "file_too_big": "File is too big",
     "file_upload_failed": "File upload failed",
     "message_placeholder": "Your Message...",
@@ -126,6 +128,9 @@
     "delete_attachment": "Delete",
     "download_attachment": "Download"
   },
+  "TicketPage": {
+    "latest_message": "Latest message"
+  },
   "TicketListWidget": {
     "title": "Meine Tickets",
     "header": "({{count}} of {{total}} tickets)",
@@ -136,7 +141,9 @@
       "open": "Open",
       "waiting": "Waiting",
       "closed": "Closed"
-    }
+    },
+    "empty": "no ticket available",
+    "show_previous_messages": "show previous messages"
   },
   "formats": {
     "relative": {
